--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "495ee434",
+   "id": "9707b716",
    "metadata": {},
    "source": [
     "#### 7. Write a Python program to calculate the length of a string. ####"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "25b80cad",
+   "id": "9f22ef12",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "329a0601",
+   "id": "e29cb856",
    "metadata": {},
    "source": [
     "#### 8. Write a Python program to split and join a string. ####"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "329d019a",
+   "id": "f7826789",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a47eb102",
+   "id": "915bc8e1",
    "metadata": {},
    "source": [
     "#### 9. Write a Python program to demonstrate of accessing the string- By using Positive Indexing. ####"
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "77d883d9",
+   "id": "e981b522",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54f05b2",
+   "id": "9bbd06dd",
    "metadata": {},
    "source": [
     "#### 10. Write a Python program to demonstrate of accessing the string- By using Negative Indexing. ####"
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1f8fe549",
+   "id": "4c0f11e9",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db1e2b41",
+   "id": "6d7e8029",
    "metadata": {},
    "source": [
     "#### 11. Write a Python program to multiplies all the items in a list. ####"
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0e975f37",
+   "id": "9382937d",
    "metadata": {},
    "outputs": [
     {
@@ -465,19 +465,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be101c97",
+   "id": "33eb9a14",
    "metadata": {},
    "source": [
-    "#### 12. Write a Python program to Reverse a linked list. ####    This  come later"
+    "#### 12. Write a Python program to Reverse a linked list. (This  will come later) ####    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f9a7a9d",
+   "metadata": {},
+   "source": [
+    "#### 13. Write a Python program to find the smallest number in a list number in a list. ####"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eec7100",
+   "id": "5e856121",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_least(newlist):\n",
+    "    least = newlist[0]\n",
+    "    for i in newlist:\n",
+    "        if least>i:\n",
+    "            least = i\n",
+    "    return least\n",
+    "\n",
+    "# Driver code\n",
+    "newlist = [2, 3, 4, 5, 10, 45, 23, 12, 1, 56, 67]"
+   ]
   }
  ],
  "metadata": {
