--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9707b716",
+   "id": "e8830438",
    "metadata": {},
    "source": [
     "#### 7. Write a Python program to calculate the length of a string. ####"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9f22ef12",
+   "id": "a91cd491",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e29cb856",
+   "id": "c4069ffe",
    "metadata": {},
    "source": [
     "#### 8. Write a Python program to split and join a string. ####"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f7826789",
+   "id": "d5ccf849",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "915bc8e1",
+   "id": "2a8759b2",
    "metadata": {},
    "source": [
     "#### 9. Write a Python program to demonstrate of accessing the string- By using Positive Indexing. ####"
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e981b522",
+   "id": "a84a66c3",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bbd06dd",
+   "id": "047408a6",
    "metadata": {},
    "source": [
     "#### 10. Write a Python program to demonstrate of accessing the string- By using Negative Indexing. ####"
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4c0f11e9",
+   "id": "4558ef8c",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d7e8029",
+   "id": "d62f2483",
    "metadata": {},
    "source": [
     "#### 11. Write a Python program to multiplies all the items in a list. ####"
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9382937d",
+   "id": "189ec1b7",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33eb9a14",
+   "id": "a36fc64d",
    "metadata": {},
    "source": [
     "#### 12. Write a Python program to Reverse a linked list. (This  will come later) ####    "
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f9a7a9d",
+   "id": "6ef12379",
    "metadata": {},
    "source": [
     "#### 13. Write a Python program to find the smallest number in a list number in a list. ####"
@@ -481,10 +481,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5e856121",
+   "execution_count": 32,
+   "id": "1d56d184",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the least element is the list is 1\n"
+     ]
+    }
+   ],
    "source": [
     "def find_least(newlist):\n",
     "    least = newlist[0]\n",
@@ -494,7 +502,35 @@
     "    return least\n",
     "\n",
     "# Driver code\n",
-    "newlist = [2, 3, 4, 5, 10, 45, 23, 12, 1, 56, 67]"
+    "newlist = [2, 3, 4, 5, 10, 45, 23, 12, 1, 56, 67]\n",
+    "print(\"the least element is the list is {}\".format(find_least(newlist)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "844d4280",
+   "metadata": {},
+   "source": [
+    "####  14. Write a Python program to find the greatest number in a list number in a list. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd234399",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_greatest(newlist):\n",
+    "    greatest = newlist[0]\n",
+    "    for i in newlist:\n",
+    "        if greatest>i:\n",
+    "            least = i\n",
+    "    return least\n",
+    "\n",
+    "# Driver code\n",
+    "newlist = [2, 3, 4, 5, 10, 45, 23, 12, 1, 56, 67]\n",
+    "print(\"the least element is the list is {}\".format(find_least(newlist)))"
    ]
   }
  ],
