--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8830438",
+   "id": "a48ea231",
    "metadata": {},
    "source": [
     "#### 7. Write a Python program to calculate the length of a string. ####"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a91cd491",
+   "id": "fe7ff5c1",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4069ffe",
+   "id": "a1454d37",
    "metadata": {},
    "source": [
     "#### 8. Write a Python program to split and join a string. ####"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d5ccf849",
+   "id": "0c30a40a",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a8759b2",
+   "id": "6781f5eb",
    "metadata": {},
    "source": [
     "#### 9. Write a Python program to demonstrate of accessing the string- By using Positive Indexing. ####"
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a84a66c3",
+   "id": "edb7da78",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "047408a6",
+   "id": "e0e1e668",
    "metadata": {},
    "source": [
     "#### 10. Write a Python program to demonstrate of accessing the string- By using Negative Indexing. ####"
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4558ef8c",
+   "id": "5e1f1308",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62f2483",
+   "id": "1ecef20c",
    "metadata": {},
    "source": [
     "#### 11. Write a Python program to multiplies all the items in a list. ####"
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "189ec1b7",
+   "id": "6abe394b",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a36fc64d",
+   "id": "309d76c5",
    "metadata": {},
    "source": [
     "#### 12. Write a Python program to Reverse a linked list. (This  will come later) ####    "
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ef12379",
+   "id": "686ee2a7",
    "metadata": {},
    "source": [
     "#### 13. Write a Python program to find the smallest number in a list number in a list. ####"
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1d56d184",
+   "id": "a0dea958",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "844d4280",
+   "id": "91ade1ec",
    "metadata": {},
    "source": [
     "####  14. Write a Python program to find the greatest number in a list number in a list. ####"
@@ -516,22 +516,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd234399",
+   "execution_count": 35,
+   "id": "22da0391",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the greatest element is the list is 93\n"
+     ]
+    }
+   ],
    "source": [
     "def find_greatest(newlist):\n",
     "    greatest = newlist[0]\n",
     "    for i in newlist:\n",
-    "        if greatest>i:\n",
-    "            least = i\n",
-    "    return least\n",
+    "        if greatest < i:\n",
+    "            greatest = i\n",
+    "    return greatest\n",
     "\n",
     "# Driver code\n",
-    "newlist = [2, 3, 4, 5, 10, 45, 23, 12, 1, 56, 67]\n",
-    "print(\"the least element is the list is {}\".format(find_least(newlist)))"
+    "newlist = [2, 3, 4, 5, 10, 45, 93, 12, 1, 56, 67]\n",
+    "print(\"the greatest element is the list is {}\".format(find_greatest(newlist)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1b64bd5",
+   "metadata": {},
+   "source": [
+    "#### 15. Write a Python program to sort (ascending order) a dictionary by value. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "21fc59d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'new_dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[36], line 14\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Driver code\u001b[39;00m\n\u001b[0;32m      7\u001b[0m new_dict \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnglish\u001b[39m\u001b[38;5;124m\"\u001b[39m:  \u001b[38;5;241m5\u001b[39m,\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMaths\u001b[39m\u001b[38;5;124m\"\u001b[39m  :  \u001b[38;5;241m3\u001b[39m,\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mScience\u001b[39m\u001b[38;5;124m\"\u001b[39m:  \u001b[38;5;241m7\u001b[39m,\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHistory\u001b[39m\u001b[38;5;124m\"\u001b[39m:  \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     12\u001b[0m }\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntered dictionary is: \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39m new_dict)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mSorted dictionary by values is: \u001b[39m\u001b[38;5;124m\"\u001b[39m, sort_dict_by_valuest(new_dict))\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'new_dict'"
+     ]
+    }
+   ],
+   "source": [
+    "def sort_dict_by_values(new_dict):\n",
+    "    sorted_dict = sorted(new_dict.values)\n",
+    "    return sorted_dict\n",
+    "\n",
+    "# Driver code\n",
+    "\n",
+    "new_dict = {\n",
+    "    \"English\":  5,\n",
+    "    \"Maths\"  :  3,\n",
+    "    \"Science\":  7,\n",
+    "    \"History\":  1\n",
+    "}\n",
+    "\n",
+    "print(\"Entered dictionary is: \". new_dict)\n",
+    "print(\"\\nSorted dictionary by values is: \", sort_dict_by_valuest(new_dict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5673d6b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
