--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a48ea231",
+   "id": "c39914e7",
    "metadata": {},
    "source": [
     "#### 7. Write a Python program to calculate the length of a string. ####"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fe7ff5c1",
+   "id": "e2400688",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1454d37",
+   "id": "f555d11a",
    "metadata": {},
    "source": [
     "#### 8. Write a Python program to split and join a string. ####"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0c30a40a",
+   "id": "1e1427a7",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6781f5eb",
+   "id": "10962908",
    "metadata": {},
    "source": [
     "#### 9. Write a Python program to demonstrate of accessing the string- By using Positive Indexing. ####"
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "edb7da78",
+   "id": "0689d79e",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0e1e668",
+   "id": "97e2681e",
    "metadata": {},
    "source": [
     "#### 10. Write a Python program to demonstrate of accessing the string- By using Negative Indexing. ####"
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5e1f1308",
+   "id": "17a10341",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ecef20c",
+   "id": "77549109",
    "metadata": {},
    "source": [
     "#### 11. Write a Python program to multiplies all the items in a list. ####"
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6abe394b",
+   "id": "17ff23bb",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "309d76c5",
+   "id": "52f79850",
    "metadata": {},
    "source": [
     "#### 12. Write a Python program to Reverse a linked list. (This  will come later) ####    "
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "686ee2a7",
+   "id": "1a5cdaf7",
    "metadata": {},
    "source": [
     "#### 13. Write a Python program to find the smallest number in a list number in a list. ####"
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a0dea958",
+   "id": "215b38a1",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91ade1ec",
+   "id": "430c7f5c",
    "metadata": {},
    "source": [
     "####  14. Write a Python program to find the greatest number in a list number in a list. ####"
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "22da0391",
+   "id": "949b719e",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1b64bd5",
+   "id": "85b6f102",
    "metadata": {},
    "source": [
     "#### 15. Write a Python program to sort (ascending order) a dictionary by value. ####"
@@ -551,25 +551,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "21fc59d5",
+   "execution_count": 39,
+   "id": "7f48a5d3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'new_dict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[36], line 14\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Driver code\u001b[39;00m\n\u001b[0;32m      7\u001b[0m new_dict \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnglish\u001b[39m\u001b[38;5;124m\"\u001b[39m:  \u001b[38;5;241m5\u001b[39m,\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMaths\u001b[39m\u001b[38;5;124m\"\u001b[39m  :  \u001b[38;5;241m3\u001b[39m,\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mScience\u001b[39m\u001b[38;5;124m\"\u001b[39m:  \u001b[38;5;241m7\u001b[39m,\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHistory\u001b[39m\u001b[38;5;124m\"\u001b[39m:  \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     12\u001b[0m }\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntered dictionary is: \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39m new_dict)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mSorted dictionary by values is: \u001b[39m\u001b[38;5;124m\"\u001b[39m, sort_dict_by_valuest(new_dict))\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'new_dict'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entered dictionary is:  {'English': 5, 'Maths': 3, 'Science': 7, 'History': 1}\n",
+      "\n",
+      "Sorted dictionary by values is:  [1, 3, 5, 7]\n"
      ]
     }
    ],
    "source": [
     "def sort_dict_by_values(new_dict):\n",
-    "    sorted_dict = sorted(new_dict.values)\n",
+    "    sorted_dict = sorted(new_dict.values())\n",
     "    return sorted_dict\n",
     "\n",
     "# Driver code\n",
@@ -581,14 +579,66 @@
     "    \"History\":  1\n",
     "}\n",
     "\n",
-    "print(\"Entered dictionary is: \". new_dict)\n",
-    "print(\"\\nSorted dictionary by values is: \", sort_dict_by_valuest(new_dict))"
+    "print(\"Entered dictionary is: \", new_dict)\n",
+    "print(\"\\nSorted dictionary by values is: \", sort_dict_by_values(new_dict))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "235d0cd0",
+   "metadata": {},
+   "source": [
+    "#### 16. Write a Python program to sort (descending order) a dictionary by value. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "719c19f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entered dictionary is:  {'English': 5, 'Maths': 3, 'Science': 7, 'History': 1}\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'TRue' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[42], line 15\u001b[0m\n\u001b[0;32m      7\u001b[0m new_dict \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnglish\u001b[39m\u001b[38;5;124m\"\u001b[39m:  \u001b[38;5;241m5\u001b[39m,\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMaths\u001b[39m\u001b[38;5;124m\"\u001b[39m  :  \u001b[38;5;241m3\u001b[39m,\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mScience\u001b[39m\u001b[38;5;124m\"\u001b[39m:  \u001b[38;5;241m7\u001b[39m,\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHistory\u001b[39m\u001b[38;5;124m\"\u001b[39m:  \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     12\u001b[0m }\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntered dictionary is: \u001b[39m\u001b[38;5;124m\"\u001b[39m, new_dict)\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mSorted dictionary by values is: \u001b[39m\u001b[38;5;124m\"\u001b[39m, sort_dict_by_values(new_dict))\n",
+      "Cell \u001b[1;32mIn[42], line 2\u001b[0m, in \u001b[0;36msort_dict_by_values\u001b[1;34m(new_dict)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msort_dict_by_values\u001b[39m(new_dict):\n\u001b[1;32m----> 2\u001b[0m     sorted_dict \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(new_dict\u001b[38;5;241m.\u001b[39mvalues(), reverse\u001b[38;5;241m=\u001b[39mTRue)\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m sorted_dict\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'TRue' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def sort_dict_by_values(new_dict):\n",
+    "    sorted_dict = sorted(new_dict.values(), reverse=TRue)\n",
+    "    return sorted_dict\n",
+    "\n",
+    "# Driver code\n",
+    "\n",
+    "new_dict = {\n",
+    "    \"English\":  5,\n",
+    "    \"Maths\"  :  3,\n",
+    "    \"Science\":  7,\n",
+    "    \"History\":  1\n",
+    "}\n",
+    "\n",
+    "print(\"Entered dictionary is: \", new_dict)\n",
+    "print(\"\\nSorted dictionary by values is: \", sort_dict_by_values(new_dict))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5673d6b5",
+   "id": "f713bcd3",
    "metadata": {},
    "outputs": [],
    "source": []
