--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -626,11 +626,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f7444b2",
+   "cell_type": "markdown",
+   "id": "c489e67f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#### Write a Python program Create a dictionary and apply the following methods: ####\n",
     "  - Print the dictionary items\n",
@@ -639,6 +637,71 @@
     "  - change values\n",
     "  - use len()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "967840ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dictionary items:\n",
+      "{'name': 'John', 'age': 30, 'city': 'New York'}\n",
+      "\n",
+      "Accessing 'name' key:\n",
+      "John\n",
+      "\n",
+      "Using get() to access 'age':\n",
+      "30\n",
+      "\n",
+      "Changing value of 'city' from 'New York' to 'Los Angeles'\n",
+      "{'name': 'John', 'age': 30, 'city': 'Los Angeles'}\n",
+      "\n",
+      "Length of dictionary:\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a dictionary\n",
+    "my_dict = {\n",
+    "    \"name\": \"John\",\n",
+    "    \"age\": 30,\n",
+    "    \"city\": \"New York\"\n",
+    "}\n",
+    "\n",
+    "# 1. Print the dictionary items\n",
+    "print(\"Dictionary items:\")\n",
+    "print(my_dict)\n",
+    "\n",
+    "# 2. Access a value using a key\n",
+    "print(\"\\nAccessing 'name' key:\")\n",
+    "print(my_dict[\"name\"])\n",
+    "\n",
+    "# 3. Use get() to access a value\n",
+    "print(\"\\nUsing get() to access 'age':\")\n",
+    "print(my_dict.get(\"age\"))\n",
+    "\n",
+    "# 4. Change values in the dictionary\n",
+    "print(\"\\nChanging value of 'city' from 'New York' to 'Los Angeles'\")\n",
+    "my_dict[\"city\"] = \"Los Angeles\"\n",
+    "print(my_dict)\n",
+    "\n",
+    "# 5. Use len() to get the number of items in the dictionary\n",
+    "print(\"\\nLength of dictionary:\")\n",
+    "print(len(my_dict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "190fa5de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
