--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c489e67f",
+   "id": "bf4e5ba4",
    "metadata": {},
    "source": [
     "#### Write a Python program Create a dictionary and apply the following methods: ####\n",
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "967840ea",
+   "id": "c4732b07",
    "metadata": {},
    "outputs": [
     {
@@ -696,12 +696,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f1d5c74",
+   "metadata": {},
+   "source": [
+    "#### 18.  Write a Python program to create a tuple with different data types.:  ####\n",
+    "      - Add items\n",
+    "      - len()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "190fa5de",
+   "id": "e672f8ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a tuple with different data types\n",
+    "my_tuple = (1, \"hello\", 3.14, True)\n",
+    "\n",
+    "# Print the original tuple\n",
+    "print(\"Original Tuple:\")\n",
+    "print(my_tuple)\n",
+    "\n",
+    "# 1. Add items by concatenating another tuple\n",
+    "# Create a new tuple to add\n",
+    "new_items = (\"Python\", 42)\n",
+    "my_tuple = my_tuple + new_items  # Concatenate the original tuple with the new tuple\n",
+    "\n",
+    "print(\"\\nTuple after adding new items:\")\n",
+    "print(my_tuple)\n",
+    "\n",
+    "# 2. Use len() to get the length of the tuple\n",
+    "print(\"\\nLength of the tuple:\")\n",
+    "print(len(my_tuple))\n"
+   ]
   }
  ],
  "metadata": {
