--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf4e5ba4",
+   "id": "c2a465f6",
    "metadata": {},
    "source": [
     "#### Write a Python program Create a dictionary and apply the following methods: ####\n",
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c4732b07",
+   "id": "2351471c",
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f1d5c74",
+   "id": "17253628",
    "metadata": {},
    "source": [
     "#### 18.  Write a Python program to create a tuple with different data types.:  ####\n",
@@ -707,10 +707,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e672f8ee",
+   "execution_count": 4,
+   "id": "b32ade30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Tuple:\n",
+      "(1, 'hello', 3.14, True)\n",
+      "\n",
+      "Tuple after adding new items:\n",
+      "(1, 'hello', 3.14, True, 'Python', 42)\n",
+      "\n",
+      "Length of the tuple:\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a tuple with different data types\n",
     "my_tuple = (1, \"hello\", 3.14, True)\n",
@@ -729,7 +744,48 @@
     "\n",
     "# 2. Use len() to get the length of the tuple\n",
     "print(\"\\nLength of the tuple:\")\n",
-    "print(len(my_tuple))\n"
+    "print(len(my_tuple))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4eb473c8",
+   "metadata": {},
+   "source": [
+    "#### Write a Python program to create a tuple and perform the following methods: ####\n",
+    "       - check for item in tuple\n",
+    "       - Access items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35cacb9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a tuple\n",
+    "my_tuple = (10, \"apple\", 3.14, True, \"banana\")\n",
+    "\n",
+    "# 1. Check for an item in the tuple\n",
+    "item_to_check = \"apple\"\n",
+    "if item_to_check in my_tuple:\n",
+    "    print(f\"'{item_to_check}' is found in the tuple.\")\n",
+    "else:\n",
+    "    print(f\"'{item_to_check}' is not found in the tuple.\")\n",
+    "\n",
+    "# 2. Access items in the tuple\n",
+    "# Accessing by index (example: accessing the first item)\n",
+    "print(\"\\nAccessing the first item of the tuple:\")\n",
+    "print(my_tuple[0])\n",
+    "\n",
+    "# Accessing by negative index (example: accessing the last item)\n",
+    "print(\"\\nAccessing the last item of the tuple:\")\n",
+    "print(my_tuple[-1])\n",
+    "\n",
+    "# Accessing a range of items (example: first 3 items)\n",
+    "print(\"\\nAccessing the first three items of the tuple:\")\n",
+    "print(my_tuple[:3])\n"
    ]
   }
  ],
