--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2a465f6",
+   "id": "a18f7b8e",
    "metadata": {},
    "source": [
     "#### Write a Python program Create a dictionary and apply the following methods: ####\n",
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2351471c",
+   "id": "7094c597",
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17253628",
+   "id": "48642ac2",
    "metadata": {},
    "source": [
     "#### 18.  Write a Python program to create a tuple with different data types.:  ####\n",
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b32ade30",
+   "id": "457cbe73",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eb473c8",
+   "id": "23446006",
    "metadata": {},
    "source": [
     "#### Write a Python program to create a tuple and perform the following methods: ####\n",
@@ -759,10 +759,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "35cacb9b",
+   "execution_count": 5,
+   "id": "292b9678",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'apple' is found in the tuple.\n",
+      "\n",
+      "Accessing the first item of the tuple:\n",
+      "10\n",
+      "\n",
+      "Accessing the last item of the tuple:\n",
+      "banana\n",
+      "\n",
+      "Accessing the first three items of the tuple:\n",
+      "(10, 'apple', 3.14)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a tuple\n",
     "my_tuple = (10, \"apple\", 3.14, True, \"banana\")\n",
@@ -785,8 +802,71 @@
     "\n",
     "# Accessing a range of items (example: first 3 items)\n",
     "print(\"\\nAccessing the first three items of the tuple:\")\n",
-    "print(my_tuple[:3])\n"
+    "print(my_tuple[:3])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63100e8d",
+   "metadata": {},
+   "source": [
+    "#### 20. Write a python program to define a module to find Fibonacci Numbers and import the module to another program. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "990a5693",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'function' object has no attribute 'fibonacci'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Driver code\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Get the first 10 Fibonacci numbers\u001b[39;00m\n\u001b[0;32m     13\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m---> 14\u001b[0m fib_numbers \u001b[38;5;241m=\u001b[39m fibonacci\u001b[38;5;241m.\u001b[39mfibonacci(n)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Print the Fibonacci numbers\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe first \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Fibonacci numbers are:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'function' object has no attribute 'fibonacci'"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n):\n",
+    "    fib_sequence = [0, 1]\n",
+    "    \n",
+    "    # Generate Fibonacci numbers up to nth position\n",
+    "    for i in range(2, n):\n",
+    "        next_fib = fib_sequence[i-1] + fib_sequence[i-2]\n",
+    "        fib_sequence.append(next_fib)\n",
+    "    \n",
+    "    return fib_sequence[:n]\n",
+    "\n",
+    "# Driver code\n",
+    "# Get the first 10 Fibonacci numbers\n",
+    "n = 10\n",
+    "fib_numbers = fibonacci.fibonacci(n)\n",
+    "\n",
+    "# Print the Fibonacci numbers\n",
+    "print(f\"The first {n} Fibonacci numbers are:\")\n",
+    "print(fib_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1d877f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a598c5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
