--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4d641f53",
+   "id": "b3ac1f82",
    "metadata": {},
    "source": [
     "#### 21. Write a program that inputs a text file. The program should print all of the unique words in the file in alphabetical order. ####"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6d1ff0ff",
+   "id": "f15deccb",
    "metadata": {},
    "outputs": [
     {
@@ -101,9 +101,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9968eef1",
+   "metadata": {},
+   "source": [
+    "#### 22. Write a python program to open and write “hello world” into a file. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e3caf701",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text 'hello world' has been written to 'hello_world.txt'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Open a file in write mode ('w')\n",
+    "def print_hello():\n",
+    "    with open('hello_world.txt', 'w') as file:\n",
+    "        # Write \"hello world\" to the file\n",
+    "        file.write(\"hello world\")\n",
+    "        print(\"Text 'hello world' has been written to 'hello_world.txt'\")\n",
+    "\n",
+    "# Driver code\n",
+    "print_hello()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d2e4141",
+   "id": "f78854a0",
    "metadata": {},
    "outputs": [],
    "source": []
