--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b3ac1f82",
+   "id": "26646012",
    "metadata": {},
    "source": [
     "#### 21. Write a program that inputs a text file. The program should print all of the unique words in the file in alphabetical order. ####"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f15deccb",
+   "id": "4c6d50e2",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9968eef1",
+   "id": "2f298694",
    "metadata": {},
    "source": [
     "#### 22. Write a python program to open and write “hello world” into a file. ####"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e3caf701",
+   "id": "d5ec62c9",
    "metadata": {},
    "outputs": [
     {
@@ -135,9 +135,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a01b6e02",
+   "metadata": {},
+   "source": [
+    "#### 23. Write a python program to write the content “hi python programming” for the above existing file. ####"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f78854a0",
+   "id": "440aff01",
    "metadata": {},
    "outputs": [],
    "source": []
