--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "26646012",
+   "id": "19e2a7d1",
    "metadata": {},
    "source": [
     "#### 21. Write a program that inputs a text file. The program should print all of the unique words in the file in alphabetical order. ####"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4c6d50e2",
+   "id": "9a793a9c",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f298694",
+   "id": "e8818fe0",
    "metadata": {},
    "source": [
     "#### 22. Write a python program to open and write “hello world” into a file. ####"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d5ec62c9",
+   "id": "feb0a195",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a01b6e02",
+   "id": "6891644b",
    "metadata": {},
    "source": [
     "#### 23. Write a python program to write the content “hi python programming” for the above existing file. ####"
@@ -144,8 +144,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "9b5ea5e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text 'hi python programming' has been written to 'hello_world.txt'\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello_again():\n",
+    "    # Open the file in append mode ('a')\n",
+    "    with open('hello_world.txt', 'a') as file:\n",
+    "    # Write \"hi python programming\" to the file\n",
+    "        file.write(\"hi python programming\\n\")\n",
+    "\n",
+    "    print(\"Text 'hi python programming' has been written to 'hello_world.txt'\")\n",
+    "\n",
+    "# Driver code\n",
+    "\n",
+    "hello_again()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26d8d221",
+   "metadata": {},
+   "source": [
+    "#### 24. Write a program to double a given number and add two numbers using lambda(). ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8909993a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The double of 5 is: 10\n",
+      "The sum of 7 and 10 is: 17\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lambda function to double a given number\n",
+    "double = lambda x: x * 2\n",
+    "\n",
+    "# Lambda function to add two numbers\n",
+    "add = lambda x, y: x + y\n",
+    "\n",
+    "# Test the functions\n",
+    "number_to_double = 5\n",
+    "number1 = 7\n",
+    "number2 = 10\n",
+    "\n",
+    "# Doubling the number\n",
+    "doubled_result = double(number_to_double)\n",
+    "\n",
+    "# Adding two numbers\n",
+    "sum_result = add(number1, number2)\n",
+    "\n",
+    "# Output the results\n",
+    "print(f\"The double of {number_to_double} is: {doubled_result}\")\n",
+    "print(f\"The sum of {number1} and {number2} is: {sum_result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "440aff01",
+   "id": "c35fef35",
    "metadata": {},
    "outputs": [],
    "source": []
